fix crate article user incorrect; fix image overflow

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -5,6 +5,14 @@
   min-height: 100%;
   position: relative;
 }
+.post img  {
+  max-width: 860px;
+  padding: 5px;
+  margin-left: auto; 
+  margin-right:auto; 
+  display:block;
+  overflow: hidden;
+}
 .title {
   display: inline;
   overflow: hidden;
